<?xml version="1.0"?>
<package>
  <name>chauffeur</name>
  <version>0.0.1</version>
  <description>Config and launch file for the chauffeur robot</description>
  <maintainer email="leonh@ndreke.de">Leon Handreke</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
