<?xml version="1.0"?>
<package>
  <name>mpu9250_arduino</name>
  <version>0.0.1</version>
  <description>Driver for an Arduino-interfaced MPU9250 IMU</description>

  <maintainer email="leonh@ndreke.de">leon</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
